--- a/infra/observability/base/router-svc.yaml
+++ b/infra/observability/base/router-svc.yaml
@@ -6,7 +6,7 @@ metadata:
     service.kubernetes.io/topology-mode: Auto
 spec:
   selector:
-    app.kubernetes.io/component: opentelemetry-collector
+    app.kubernetes.io/name: otel-router
   ports:
     - name: otlp-grpc
       port: 4317
