--- a/infra/observability/studio/kustomization.yaml
+++ b/infra/observability/studio/kustomization.yaml
@@ -10,3 +10,12 @@ patches:
   - path: patches/router-config.yaml
   - path: patches/gateway-config.yaml
   - path: patches/gateway-secrets.yaml
+  - target:
+      group: rbac.authorization.k8s.io
+      version: v1
+      kind: ClusterRoleBinding
+      name: otel-collector
+    patch: |-
+      - op: replace
+        path: /subjects/0/namespace
+        value: observability
