--- a/infra/observability/base/gateway.yaml
+++ b/infra/observability/base/gateway.yaml
@@ -2,9 +2,11 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: otel-gateway
+  labels:
+    altinn.studio/otel-collector: otel-gateway
 spec:
   mode: deployment
-  image: otel/opentelemetry-collector-contrib:0.145.0
+  image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:0.144.0
   serviceAccount: otel-collector
   upgradeStrategy: automatic
   replicas: 1
@@ -21,7 +23,7 @@ spec:
       whenUnsatisfiable: ScheduleAnyway
       labelSelector:
         matchLabels:
-          app.kubernetes.io/name: otel-gateway
+          altinn.studio/otel-collector: otel-gateway
   config:
     receivers:
       otlp:
