--- a/infra/observability/base/router.yaml
+++ b/infra/observability/base/router.yaml
@@ -2,9 +2,11 @@ apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: otel-router
+  labels:
+    altinn.studio/otel-collector: otel-router
 spec:
   mode: deployment
-  image: otel/opentelemetry-collector-contrib:0.145.0
+  image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:0.144.0
   serviceAccount: otel-collector
   upgradeStrategy: automatic
   replicas: 1
@@ -21,7 +23,7 @@ spec:
       whenUnsatisfiable: ScheduleAnyway
       labelSelector:
         matchLabels:
-          app.kubernetes.io/name: otel-router
+          altinn.studio/otel-collector: otel-router
   config:
     receivers:
       otlp:
@@ -59,7 +61,7 @@ spec:
             - service.version
           labels:
             - tag_name: app.label.name
-              key: app.kubernetes.io/name
+              key: altinn.studio/otel-collector
               from: pod
         pod_association:
           - sources:
