--- a/infra/observability/runtime/kustomization.yaml
+++ b/infra/observability/runtime/kustomization.yaml
@@ -1,23 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: runtime-obs
-
 resources:
-  - ../base
-
-patches:
-  - path: patches/linkerd-injection.yaml
-  - path: patches/router-config.yaml
-  - path: patches/network-policy-labels.yaml
-  - path: patches/gateway-config.yaml
-  - path: patches/gateway-secrets.yaml
-  - target:
-      group: rbac.authorization.k8s.io
-      version: v1
-      kind: ClusterRoleBinding
-      name: otel-collector
-    patch: |-
-      - op: replace
-        path: /subjects/0/namespace
-        value: runtime-obs
+  - overlay
