--- a/infra/observability/studio/kustomization.yaml
+++ b/infra/observability/studio/kustomization.yaml
@@ -1,21 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: observability
-
 resources:
-  - ../base
-
-patches:
-  - path: patches/router-config.yaml
-  - path: patches/gateway-config.yaml
-  - path: patches/gateway-secrets.yaml
-  - target:
-      group: rbac.authorization.k8s.io
-      version: v1
-      kind: ClusterRoleBinding
-      name: otel-collector
-    patch: |-
-      - op: replace
-        path: /subjects/0/namespace
-        value: observability
+  - overlay
