Docker compose and telemetry tweaks

--- a/src/Runtime/workflow-engine/.docker/grafana-datasources.yml
+++ b/src/Runtime/workflow-engine/.docker/grafana-datasources.yml
@@ -1,9 +1,10 @@
 apiVersion: 1
 datasources:
   - name: PostgreSQL
-    type: postgres
+    type: grafana-postgresql-datasource
     url: postgres:5432
     user: postgres
+    editable: true
     secureJsonData:
       password: postgres123
     jsonData:
