--- a/src/Runtime/workflow-engine/docker-compose.yaml
+++ b/src/Runtime/workflow-engine/docker-compose.yaml
@@ -10,13 +10,15 @@ services:
       - "8080:8080"
       - "8081:8081"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Docker
+      ASPNETCORE_ENVIRONMENT: Docker
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://lgtm:4317
     depends_on:
       postgres:
         condition: service_healthy
+    profiles: [app, full]
 
   postgres:
-    image: postgres:16
+    image: postgres:18
     container_name: workflow-engine-postgres
     environment:
       POSTGRES_DB: workflow_engine
@@ -44,6 +46,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin123
       PGADMIN_CONFIG_SERVER_MODE: 'False'
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
+      GUNICORN_ACCESS_LOGFILE: '/dev/null'
     ports:
       - "5050:80"
     depends_on:
@@ -53,6 +56,33 @@ services:
     volumes:
       - pgadmin_data:/var/lib/pgadmin
       - ./.docker/servers.json:/pgadmin4/servers.json
+
+  blackbox-exporter:
+    image: prom/blackbox-exporter:latest
+    container_name: workflow-engine-blackbox
+    volumes:
+      - ./.docker/blackbox.yml:/config/blackbox.yml:ro
+    command: --config.file=/config/blackbox.yml
+    depends_on:
+      - workflow-engine
+    networks:
+      - workflow-engine-network
+    profiles: [app, full]
+
+  postgres-exporter:
+    image: quay.io/prometheuscommunity/postgres-exporter
+    container_name: workflow-engine-postgres-exporter
+    environment:
+      DATA_SOURCE_URI: postgres:5432/workflow_engine?sslmode=disable
+      DATA_SOURCE_USER: postgres
+      DATA_SOURCE_PASS: postgres123
+    ports:
+      - "9187:9187"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - workflow-engine-network
 
   lgtm:
     image: grafana/otel-lgtm:0.17.0
@@ -65,7 +95,10 @@ services:
       - '4317:4317'
       - '4318:4318'
     volumes:
-      - ./.docker/grafana-datasources.yml:/etc/grafana/provisioning/datasources/postgres.yml:ro
+      - ./.docker/grafana-datasources.yml:/otel-lgtm/grafana/conf/provisioning/datasources/postgres.yaml:ro
+      - ./.docker/grafana-dashboards.yml:/otel-lgtm/grafana/conf/provisioning/dashboards/workflow-engine.yaml:ro
+      - ./.docker/dashboards:/etc/grafana/dashboards:ro
+      - ./.docker/prometheus.yaml:/otel-lgtm/prometheus.yaml:ro
 
 volumes:
   postgres_data:
