chore: gateway add otel sdk

--- a/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
@@ -94,6 +94,10 @@ spec:
                   fieldPath: metadata.uid
             - name: OTEL_RESOURCE_ATTRIBUTES
               value: "k8s.pod.uid=$(POD_UID)"
+            - name: OTEL_SERVICE_NAME
+              value: "gateway"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "http://otel-router.runtime-obs.svc.cluster.local:4317"
             - name: ASPNETCORE_ENVIRONMENT
               valueFrom:
                 # Configmap is created in syncroot
