--- a/infra/runtime/syncroot/prod/kustomization.yaml
+++ b/infra/runtime/syncroot/prod/kustomization.yaml
@@ -2,3 +2,26 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
+  - ../grafana-manifests
+patches:
+  - target:
+      kind: OCIRepository
+      name: apps-syncroot-repo
+    patch: |-
+      - op: replace
+        path: /spec/ref/tag
+        value: production
+  - target:
+      kind: Kustomization
+      name: syncroot-apps-kustomization
+    patch: |-
+      - op: replace
+        path: /spec/path
+        value: ./production
+  - target:
+      kind: Kustomization
+      name: grafana-manifests
+    patch: |-
+      - op: replace
+        path: /spec/postBuild/substitute/GATEWAY_URL
+        value: "https://${SERVICEOWNER_ID}.apps.altinn.no/runtime/gateway/api/v1"
