--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -33,6 +33,7 @@
   },
   "AppCommandSettings": {
     "ApiKey": "afc64bcf-fedf-442d-8d41-09b8c5f03c59",
-    "CommandEndpoint":  "http://local.altinn.cloud/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/workflow-engine-callbacks"
+//    "CommandEndpoint":  "http://local.altinn.cloud/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/workflow-engine-callbacks"
+    "CommandEndpoint":  "http://localhost:6060/{Org}/{App}/instances/{InstanceOwnerPartyId}/{InstanceGuid}/workflow-engine-callbacks"
   }
 }
