Update Altinity app settings to use localhost for all environments

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -149,5 +149,9 @@
     },
     "SchedulingSettings": {
         "UsePersistentScheduling": false
+    },
+    "AltinitySettings": {
+        "AgentUrl": "http://localhost:8071",
+        "TimeoutSeconds": 300
     }
 }
