use host.docker.internal url

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -151,7 +151,7 @@
         "UsePersistentScheduling": false
     },
     "AltinitySettings": {
-        "AgentUrl": "http://localhost:8071",
+        "AgentUrl": "http://host.docker.internal:8071",
         "TimeoutSeconds": 300
     }
 }
