Add subform pdf and do a bunch of cleanup/renaming.

--- a/App/config/applicationmetadata.json
+++ b/App/config/applicationmetadata.json
@@ -19,19 +19,6 @@
       "enabledFileValidators": []
     },
     {
-      "id": "subform-pdf",
-      "allowedContentTypes": [
-        "application/pdf"
-      ],
-      "maxCount": 0,
-      "minCount": 0,
-      "enablePdfCreation": false,
-      "enableFileScan": false,
-      "validationErrorOnPendingFileScan": false,
-      "enabledFileAnalysers": [],
-      "enabledFileValidators": []
-    },
-    {
       "id": "model",
       "allowedContentTypes": [
         "application/xml"
@@ -83,7 +70,7 @@
         "application/xml"
       ],
       "appLogic": {
-        "autoCreate": true,
+        "autoCreate": false,
         "classRef": "Altinn.App.Models.SubformModel.SubformModel",
         "allowAnonymousOnStateless": false,
         "autoDeleteOnProcessEnd": false,
