chore: otel collector improvements

--- a/infra/observability/runtime/overlay/patches/gateway-config.yaml
+++ b/infra/observability/runtime/overlay/patches/gateway-config.yaml
@@ -23,8 +23,10 @@ spec:
 
     exporters:
       azuremonitor/control_plane:
+        spaneventsenabled: true
         connection_string: $${env:CONTROL_PLANE_CONNECTION_STRING}
       azuremonitor/data_plane:
+        spaneventsenabled: true
         connection_string: $${env:DATA_PLANE_CONNECTION_STRING}
 
     service:
