--- a/infra/observability/runtime/overlay/patches/router-config.yaml
+++ b/infra/observability/runtime/overlay/patches/router-config.yaml
@@ -40,11 +40,11 @@ spec:
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [resourcedetection/aks, k8sattributes, resource/environment, batch]
+          processors: [resourcedetection/aks, k8sattributes, resource/environment, transform/drop, batch]
           exporters: [loadbalancing/traces]
         metrics:
           receivers: [otlp]
-          processors: [resourcedetection/aks, k8sattributes, resource/environment, batch]
+          processors: [resourcedetection/aks, k8sattributes, resource/environment, transform/drop, batch]
           exporters: [loadbalancing/metrics]
         logs:
           receivers: [otlp]
