--- a/infra/observability/studio/overlay/patches/gateway-config.yaml
+++ b/infra/observability/studio/overlay/patches/gateway-config.yaml
@@ -6,6 +6,7 @@ spec:
   config:
     exporters:
       azuremonitor:
+        spaneventsenabled: true
         connection_string: $${env:APPLICATIONINSIGHTS_CONNECTION_STRING}
 
     service:
