--- a/infra/observability/base/router.yaml
+++ b/infra/observability/base/router.yaml
@@ -50,7 +50,6 @@ spec:
           metadata:
             - k8s.namespace.name
             - k8s.pod.name
-            - k8s.pod.start_time
             - k8s.pod.uid
             - k8s.deployment.name
             - k8s.job.name
@@ -59,10 +58,6 @@ spec:
             - k8s.node.name
             - service.name
             - service.version
-          labels:
-            - tag_name: app.label.name
-              key: altinn.studio/otel-collector
-              from: pod
         pod_association:
           - sources:
               - from: resource_attribute
@@ -82,4 +77,109 @@ spec:
         logs:
           log_record:
             - 'severity_number < SEVERITY_NUMBER_WARN'
+      transform/drop:
+        metric_statements:
+          - context: datapoint
+            statements:
+              - delete_key(attributes, "process.command_args")
+              - delete_key(resource.attributes, "process.command_args")
+              - delete_key(attributes, "instrumentationlibrary.name")
+              - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - delete_key(attributes, "network.peer.port")
+              - delete_key(resource.attributes, "network.peer.port")
+              - delete_key(attributes, "network.protocol.version")
+              - delete_key(resource.attributes, "network.protocol.version")
+              - delete_key(attributes, "os.description")
+              - delete_key(resource.attributes, "os.description")
+              - delete_key(attributes, "os.type")
+              - delete_key(resource.attributes, "os.type")
+              - delete_key(attributes, "process.executable.name")
+              - delete_key(resource.attributes, "process.executable.name")
+              - delete_key(attributes, "process.executable.path")
+              - delete_key(resource.attributes, "process.executable.path")
+              - delete_key(attributes, "process.owner")
+              - delete_key(resource.attributes, "process.owner")
+              - delete_key(attributes, "process.pid")
+              - delete_key(resource.attributes, "process.pid")
+              - delete_key(attributes, "process.runtime.description")
+              - delete_key(resource.attributes, "process.runtime.description")
+              - delete_key(attributes, "process.runtime.name")
+              - delete_key(resource.attributes, "process.runtime.name")
+              - delete_key(attributes, "process.runtime.version")
+              - delete_key(resource.attributes, "process.runtime.version")
+              - delete_key(attributes, "telemetry.sdk.language")
+              - delete_key(resource.attributes, "telemetry.sdk.language")
+              - delete_key(attributes, "telemetry.sdk.name")
+              - delete_key(resource.attributes, "telemetry.sdk.name")
+              - delete_key(attributes, "telemetry.sdk.version")
+              - delete_key(resource.attributes, "telemetry.sdk.version")
+        trace_statements:
+          - context: span
+            statements:
+              - delete_key(attributes, "process.command_args")
+              - delete_key(resource.attributes, "process.command_args")
+              - delete_key(attributes, "instrumentationlibrary.name")
+              - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - delete_key(attributes, "network.peer.port")
+              - delete_key(resource.attributes, "network.peer.port")
+              - delete_key(attributes, "network.protocol.version")
+              - delete_key(resource.attributes, "network.protocol.version")
+              - delete_key(attributes, "os.description")
+              - delete_key(resource.attributes, "os.description")
+              - delete_key(attributes, "os.type")
+              - delete_key(resource.attributes, "os.type")
+              - delete_key(attributes, "process.executable.name")
+              - delete_key(resource.attributes, "process.executable.name")
+              - delete_key(attributes, "process.executable.path")
+              - delete_key(resource.attributes, "process.executable.path")
+              - delete_key(attributes, "process.owner")
+              - delete_key(resource.attributes, "process.owner")
+              - delete_key(attributes, "process.pid")
+              - delete_key(resource.attributes, "process.pid")
+              - delete_key(attributes, "process.runtime.description")
+              - delete_key(resource.attributes, "process.runtime.description")
+              - delete_key(attributes, "process.runtime.name")
+              - delete_key(resource.attributes, "process.runtime.name")
+              - delete_key(attributes, "process.runtime.version")
+              - delete_key(resource.attributes, "process.runtime.version")
+              - delete_key(attributes, "telemetry.sdk.language")
+              - delete_key(resource.attributes, "telemetry.sdk.language")
+              - delete_key(attributes, "telemetry.sdk.name")
+              - delete_key(resource.attributes, "telemetry.sdk.name")
+              - delete_key(attributes, "telemetry.sdk.version")
+              - delete_key(resource.attributes, "telemetry.sdk.version")
+          - context: spanevent
+            statements:
+              - delete_key(attributes, "process.command_args")
+              - delete_key(resource.attributes, "process.command_args")
+              - delete_key(attributes, "instrumentationlibrary.name")
+              - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - delete_key(attributes, "network.peer.port")
+              - delete_key(resource.attributes, "network.peer.port")
+              - delete_key(attributes, "network.protocol.version")
+              - delete_key(resource.attributes, "network.protocol.version")
+              - delete_key(attributes, "os.description")
+              - delete_key(resource.attributes, "os.description")
+              - delete_key(attributes, "os.type")
+              - delete_key(resource.attributes, "os.type")
+              - delete_key(attributes, "process.executable.name")
+              - delete_key(resource.attributes, "process.executable.name")
+              - delete_key(attributes, "process.executable.path")
+              - delete_key(resource.attributes, "process.executable.path")
+              - delete_key(attributes, "process.owner")
+              - delete_key(resource.attributes, "process.owner")
+              - delete_key(attributes, "process.pid")
+              - delete_key(resource.attributes, "process.pid")
+              - delete_key(attributes, "process.runtime.description")
+              - delete_key(resource.attributes, "process.runtime.description")
+              - delete_key(attributes, "process.runtime.name")
+              - delete_key(resource.attributes, "process.runtime.name")
+              - delete_key(attributes, "process.runtime.version")
+              - delete_key(resource.attributes, "process.runtime.version")
+              - delete_key(attributes, "telemetry.sdk.language")
+              - delete_key(resource.attributes, "telemetry.sdk.language")
+              - delete_key(attributes, "telemetry.sdk.name")
+              - delete_key(resource.attributes, "telemetry.sdk.name")
+              - delete_key(attributes, "telemetry.sdk.version")
+              - delete_key(resource.attributes, "telemetry.sdk.version")
       batch: {}
