try to delete instrumentationlibrary attributes

--- a/infra/observability/base/router.yaml
+++ b/infra/observability/base/router.yaml
@@ -85,6 +85,8 @@ spec:
               - delete_key(resource.attributes, "process.command_args")
               - delete_key(attributes, "instrumentationlibrary.name")
               - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - set(instrumentation_scope.name, "")
+              - set(instrumentation_scope.version, "")
               - delete_key(attributes, "network.peer.port")
               - delete_key(resource.attributes, "network.peer.port")
               - delete_key(attributes, "network.protocol.version")
@@ -120,6 +122,8 @@ spec:
               - delete_key(resource.attributes, "process.command_args")
               - delete_key(attributes, "instrumentationlibrary.name")
               - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - set(instrumentation_scope.name, "")
+              - set(instrumentation_scope.version, "")
               - delete_key(attributes, "network.peer.port")
               - delete_key(resource.attributes, "network.peer.port")
               - delete_key(attributes, "network.protocol.version")
@@ -154,6 +158,8 @@ spec:
               - delete_key(resource.attributes, "process.command_args")
               - delete_key(attributes, "instrumentationlibrary.name")
               - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - set(instrumentation_scope.name, "")
+              - set(instrumentation_scope.version, "")
               - delete_key(attributes, "network.peer.port")
               - delete_key(resource.attributes, "network.peer.port")
               - delete_key(attributes, "network.protocol.version")
