--- a/infra/observability/base/router.yaml
+++ b/infra/observability/base/router.yaml
@@ -188,4 +188,41 @@ spec:
               - delete_key(resource.attributes, "telemetry.sdk.name")
               - delete_key(attributes, "telemetry.sdk.version")
               - delete_key(resource.attributes, "telemetry.sdk.version")
+        log_statements:
+          - context: log
+            statements:
+              - delete_key(attributes, "process.command_args")
+              - delete_key(resource.attributes, "process.command_args")
+              - delete_key(attributes, "instrumentationlibrary.name")
+              - delete_key(resource.attributes, "instrumentationlibrary.name")
+              - set(instrumentation_scope.name, "")
+              - set(instrumentation_scope.version, "")
+              - delete_key(attributes, "network.peer.port")
+              - delete_key(resource.attributes, "network.peer.port")
+              - delete_key(attributes, "network.protocol.version")
+              - delete_key(resource.attributes, "network.protocol.version")
+              - delete_key(attributes, "os.description")
+              - delete_key(resource.attributes, "os.description")
+              - delete_key(attributes, "os.type")
+              - delete_key(resource.attributes, "os.type")
+              - delete_key(attributes, "process.executable.name")
+              - delete_key(resource.attributes, "process.executable.name")
+              - delete_key(attributes, "process.executable.path")
+              - delete_key(resource.attributes, "process.executable.path")
+              - delete_key(attributes, "process.owner")
+              - delete_key(resource.attributes, "process.owner")
+              - delete_key(attributes, "process.pid")
+              - delete_key(resource.attributes, "process.pid")
+              - delete_key(attributes, "process.runtime.description")
+              - delete_key(resource.attributes, "process.runtime.description")
+              - delete_key(attributes, "process.runtime.name")
+              - delete_key(resource.attributes, "process.runtime.name")
+              - delete_key(attributes, "process.runtime.version")
+              - delete_key(resource.attributes, "process.runtime.version")
+              - delete_key(attributes, "telemetry.sdk.language")
+              - delete_key(resource.attributes, "telemetry.sdk.language")
+              - delete_key(attributes, "telemetry.sdk.name")
+              - delete_key(resource.attributes, "telemetry.sdk.name")
+              - delete_key(attributes, "telemetry.sdk.version")
+              - delete_key(resource.attributes, "telemetry.sdk.version")
       batch: {}
