--- a/src/AI/agents/dockerfile
+++ b/src/AI/agents/dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.14-slim-bookworm@sha256:e8a1ad81a9fef9dc56372fb49b50818cac71f5fae238b21d7738d73ccae8f803
+FROM python:3.12-slim-bookworm
 
 WORKDIR /app
 
