Organises and adds some test projects

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Resilience/WorkflowEngine.Resilience.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Resilience/WorkflowEngine.Resilience.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+
 </Project>
