--- a/src/Runtime/workflow-engine/tests/WorkflowEngine.Data.Tests/WorkflowEngine.Data.Tests.csproj
+++ b/src/Runtime/workflow-engine/tests/WorkflowEngine.Data.Tests/WorkflowEngine.Data.Tests.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <RootNamespace>WorkflowEngine.Api.Tests</RootNamespace>
+    <RootNamespace>WorkflowEngine.Data.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
