--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="../WorkflowEngine.Resilience/WorkflowEngine.Resilience.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="WorkflowEngine.Data" />
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+
 </Project>
