--- a/charts/altinn-designer/values.yaml
+++ b/charts/altinn-designer/values.yaml
@@ -27,6 +27,10 @@ service:
 
 environmentVariables:
   dev:
+    - name: OTEL_SERVICE_NAME
+      value: studio-designer
+    - name: OTEL_EXPORTER_OTLP_ENDPOINT
+      value: http://otel-router.observability.svc.cluster.local:4317
     - name: ASPNETCORE_ENVIRONMENT
       value: Staging
     - name: ASPNETCORE_URLS
@@ -75,6 +79,10 @@ environmentVariables:
           name: altinn-studio-env-secret
           key: aiConnectionString
   staging:
+    - name: OTEL_SERVICE_NAME
+      value: studio-designer
+    - name: OTEL_EXPORTER_OTLP_ENDPOINT
+      value: http://otel-router.observability.svc.cluster.local:4317
     - name: ASPNETCORE_ENVIRONMENT
       value: Staging
     - name: ASPNETCORE_URLS
@@ -123,6 +131,10 @@ environmentVariables:
           name: altinn-studio-env-secret
           key: aiConnectionString
   prod:
+    - name: OTEL_SERVICE_NAME
+      value: studio-designer
+    - name: OTEL_EXPORTER_OTLP_ENDPOINT
+      value: http://otel-router.observability.svc.cluster.local:4317
     - name: ASPNETCORE_ENVIRONMENT
       value: Production
     - name: ASPNETCORE_URLS
