using default values for partyTypesAllowed in template to match current behavior

--- a/src/App/template/src/App/config/applicationmetadata.json
+++ b/src/App/template/src/App/config/applicationmetadata.json
@@ -35,10 +35,10 @@
     }
   ],
   "partyTypesAllowed": {
-    "bankruptcyEstate": true,
-    "organisation": true,
-    "person": true,
-    "subUnit": true
+    "bankruptcyEstate": false,
+    "organisation": false,
+    "person": false,
+    "subUnit": false
   },
   "autoDeleteOnProcessEnd": false
 }
