--- a/charts/altinn-designer/values.yaml
+++ b/charts/altinn-designer/values.yaml
@@ -78,6 +78,16 @@ environmentVariables:
         secretKeyRef:
           name: altinn-studio-env-secret
           key: aiConnectionString
+    - name: POSTHOG_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiKey
+    - name: POSTHOG_API_HOST
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiHost
   staging:
     - name: OTEL_SERVICE_NAME
       value: studio-designer
@@ -130,6 +140,16 @@ environmentVariables:
         secretKeyRef:
           name: altinn-studio-env-secret
           key: aiConnectionString
+    - name: POSTHOG_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiKey
+    - name: POSTHOG_API_HOST
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiHost
   prod:
     - name: OTEL_SERVICE_NAME
       value: studio-designer
@@ -180,6 +200,16 @@ environmentVariables:
         secretKeyRef:
           name: altinn-studio-env-secret
           key: aiConnectionString
+    - name: POSTHOG_API_KEY
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiKey
+    - name: POSTHOG_API_HOST
+      valueFrom:
+        secretKeyRef:
+          name: altinn-studio-env-secret
+          key: postHogApiHost
 
 dbMigrationsEnvironmentVariablesSecretName: altinn-designer-db-migrations-secret
 
@@ -243,4 +273,4 @@ lifecycle:
         - -c
         - >
           mkdir -p wwwroot/designer/config &&
-          echo "{\"aiConnectionString\": \"${AI_CONNECTION_STRING}\"}" > wwwroot/designer/config/env.json
+          echo "{\"aiConnectionString\": \"${AI_CONNECTION_STRING}\", \"postHogApiKey\": \"${POSTHOG_API_KEY}\", \"postHogApiHost\": \"${POSTHOG_API_HOST}\"}" > wwwroot/designer/config/env.json
