Engine.MainLoop speed optimizations

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -11,6 +11,7 @@
   },
   "EngineSettings": {
     "QueueCapacity": 10000,
+    "MaxDegreeOfParallelism": 100,
     "DefaultStepCommandTimeout": "00:01:40",
     "DefaultStepRetryStrategy": {
       "BackoffType": "exponential",
