--- a/src/Runtime/workflow-engine/.docker/blackbox.yml
+++ b/src/Runtime/workflow-engine/.docker/blackbox.yml
@@ -6,3 +6,4 @@ modules:
       valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
       valid_status_codes: [200]
       method: GET
+      preferred_ip_protocol: ip4
