--- a/src/Runtime/kubernetes-wrapper/src/appsettings.json
+++ b/src/Runtime/kubernetes-wrapper/src/appsettings.json
@@ -4,9 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "GeneralSettings": {
-    "ApplicationLogAnalyticsWorkspaceId": "",
-    "OperationalLogAnalyticsWorkspaceId": ""
-  }
+  "AllowedHosts": "*"
 }
