--- a/src/Runtime/kubernetes-wrapper/src/Dockerfile
+++ b/src/Runtime/kubernetes-wrapper/src/Dockerfile
@@ -1,16 +1,21 @@
-FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine@sha256:e0f7abfb9c18aa419198b2c4e05dc2f7fd864a6098f09bddb1ceb2b0bce67685 AS build
-WORKDIR /app
+FROM mcr.microsoft.com/dotnet/sdk:10.0-alpine@sha256:d17d8d6511aee3dd54b4d9e8e03d867b1c3df28fb518ee9dd69e50305b7af4ee AS build
+WORKDIR /src
 
-# Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
+# Copy restore inputs and restore as distinct layer
+COPY Directory.Packages.props ./
+COPY Directory.Build.props ./
+COPY global.json ./
+COPY .csharpierignore ./
+COPY .csharpierrc.yaml ./
+COPY src/*.csproj ./src/
+RUN dotnet restore ./src/Altinn.Studio.KubernetesWrapper.csproj
 
 # Copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
+COPY src/. ./src/
+RUN dotnet publish ./src/Altinn.Studio.KubernetesWrapper.csproj -c Release -o /app/out --no-restore
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine@sha256:56f0ed1f866f9db4fa0969dc2cd222d50a41800f455107e63f5bcca76c0b4cff AS final
+FROM mcr.microsoft.com/dotnet/aspnet:10.0-alpine@sha256:8e21337e482e353c958681789872b3451e966e07c259b9a6f9a8b7902749a785 AS final
 WORKDIR /app
 COPY --from=build /app/out .
 ENTRYPOINT ["dotnet", "Altinn.Studio.KubernetesWrapper.dll"]
