--- a/src/Runtime/kubernetes-wrapper/tests/Altinn.Studio.KubernetesWrapper.Tests/Altinn.Studio.KubernetesWrapper.Tests.csproj
+++ b/src/Runtime/kubernetes-wrapper/tests/Altinn.Studio.KubernetesWrapper.Tests/Altinn.Studio.KubernetesWrapper.Tests.csproj
@@ -1,22 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.12" />
-    <PackageReference Include="TUnit" Version="1.13.11" />
-    <PackageReference Include="Verify.TUnit" Version="31.12.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <PackageReference Include="TUnit" />
+    <PackageReference Include="Verify.TUnit" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Altinn.Studio.KubernetesWrapper.csproj" />
+    <ProjectReference Include="../../src/Altinn.Studio.KubernetesWrapper.csproj" />
   </ItemGroup>
 
 </Project>
