Concurrency limiter. Test scripts

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -25,7 +25,9 @@
       "BaseInterval": "00:00:00.100",
       "MaxDelay": "00:02:00",
       "MaxDuration": "02:00:00"
-    }
+    },
+    "MaxConcurrentDbOperations": 80,
+    "MaxConcurrentHttpCalls": 100
   },
   "ApiSettings": {
     "ApiKeys": [
