chore: kubernetes-wrapper add some more testing

--- a/src/Runtime/kubernetes-wrapper/src/Altinn.Studio.KubernetesWrapper.csproj
+++ b/src/Runtime/kubernetes-wrapper/src/Altinn.Studio.KubernetesWrapper.csproj
@@ -15,4 +15,8 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+
 </Project>
