WIP tuning, stampede protections, upgrade to k6 stress testing

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -12,6 +12,8 @@
   "EngineSettings": {
     "QueueCapacity": 10000,
     "MaxDegreeOfParallelism": 100,
+    "MaxConcurrentDbOperations": 95,
+    "MaxConcurrentHttpCalls": 250,
     "DefaultStepCommandTimeout": "00:01:40",
     "DefaultStepRetryStrategy": {
       "BackoffType": "exponential",
@@ -25,9 +27,7 @@
       "BaseInterval": "00:00:00.100",
       "MaxDelay": "00:02:00",
       "MaxDuration": "02:00:00"
-    },
-    "MaxConcurrentDbOperations": 80,
-    "MaxConcurrentHttpCalls": 100
+    }
   },
   "ApiSettings": {
     "ApiKeys": [
