Telemetry linking improvements, tuning, k6, misc

--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -13,7 +14,7 @@
     "QueueCapacity": 10000,
     "MaxDegreeOfParallelism": 100,
     "MaxConcurrentDbOperations": 95,
-    "MaxConcurrentHttpCalls": 250,
+    "MaxConcurrentHttpCalls": 500,
     "DefaultStepCommandTimeout": "00:01:40",
     "DefaultStepRetryStrategy": {
       "BackoffType": "exponential",
