--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Development.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "EngineSettings": {},
   "ApiSettings": {},
-  "AppCommandSettings": {}
+  "AppCommandSettings": {},
+  "OTEL_DOTNET_EXPERIMENTAL_EFCORE_ENABLE_TRACE_DB_QUERY_PARAMETERS": "true"
 }
