poc email sms notification

--- a/src/Designer/backend/src/Designer/appsettings.Development.json
+++ b/src/Designer/backend/src/Designer/appsettings.Development.json
@@ -2,6 +2,10 @@
     "PlatformSettings": {
         "AppClusterUrlPattern": "http://host.docker.internal:6161/apps/{org}/{env}"
     },
+    "AlertsSettings": {
+        "Email": "test@test.no",
+        "Phone": "+4798765432"
+    },
     "GeneralSettings": {
         "TemplateLocation": "../../../../App/template/src",
         "DeploymentLocation": "../../../../App/template/src/deployment",
