--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -21,6 +21,7 @@
         "ApiStorageApplicationUri": "storage/api/v1/applications/",
         "ApiStorageInstancesUri": "storage/api/v1/studio/instances/",
         "ApiAuthorizationPolicyUri": "authorization/api/v1/policies/",
+        "ApiNotificationOrdersUri": "notifications/api/v1/future/orders",
         "SubscriptionKeyHeaderName": "Ocp-Apim-Subscription-Key",
         "ResourceRegistryUrl": "/resourceregistry/api/v1/resource",
         "ResourceRegistryAccessListUrl": "/resourceregistry/api/v1/access-lists",
